feat(jobserver): Replace manager_start with SparkLauncher
* Move variables from manager_start and server_start to setenv
* Use set -a in server_start.sh to expose all the variables in env.
These variables are then used to launch driver JVM.
* Move variables like jar file, conf etc to setenv to make it more
configurable
* Replace spawning of manager_start in AkkaClusterSupervisor to
Launcher
* Add abstract class Launcher to hold common variables and functions
* Add concrete implementation for manager with manager specific
properties
* Update documentation