@@ -18,22 +18,11 @@ get_abs_script_path() {
 
 get_abs_script_path
 
+set -a
 . $appdir/setenv.sh
+set +a
 
-GC_OPTS="-XX:+UseConcMarkSweepGC
-         -verbose:gc -XX:+PrintGCTimeStamps -Xloggc:$appdir/gc.out
-         -XX:MaxPermSize=512m
-         -XX:+CMSClassUnloadingEnabled "
-
-# To truly enable JMX in AWS and other containerized environments, also need to set
-# -Djava.rmi.server.hostname equal to the hostname in that environment.  This is specific
-# depending on AWS vs GCE etc.
-JAVA_OPTS="-XX:MaxDirectMemorySize=$MAX_DIRECT_MEMORY \
-           -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true \
-           -Dcom.sun.management.jmxremote.port=$JMX_PORT \
-           -Dcom.sun.management.jmxremote.rmi.port=$JMX_PORT \
-           -Dcom.sun.management.jmxremote.authenticate=false \
-           -Dcom.sun.management.jmxremote.ssl=false"
+GC_OPTS_SERVER="$GC_OPTS_BASE -Xloggc:$appdir/$GC_OUT_FILE_NAME"
 
 MAIN="spark.jobserver.JobServer"
 
@@ -45,7 +34,7 @@ fi
 
 cmd='$SPARK_HOME/bin/spark-submit --class $MAIN --driver-memory $JOBSERVER_MEMORY
   --conf "spark.executor.extraJavaOptions=$LOGGING_OPTS"
-  --driver-java-options "$GC_OPTS $JAVA_OPTS $LOGGING_OPTS $CONFIG_OVERRIDES"
+  --driver-java-options "$GC_OPTS_SERVER $JAVA_OPTS_SERVER $LOGGING_OPTS $CONFIG_OVERRIDES"
   $@ $appdir/spark-job-server.jar $conffile'
 if [ -z "$JOBSERVER_FG" ]; then
   eval $cmd > $LOG_DIR/server_start.log 2>&1 < /dev/null &
